<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.HealthCheckFilterActivity">

    <data>
        <variable
            name="activity"
            type="kr.co.alphadopetshop.ui.main.HealthCheckFilterActivity" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnBottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/topView"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:background="@color/white"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/btnClose"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@drawable/effect_ripple_oval"
                        android:clickable="true"
                        android:src="@drawable/icon_close_black"
                        android:onClick="@{() -> activity.finish()}"
                        app:layout_constraintHorizontal_bias="0.057"
                        app:layout_constraintHeight_percent="0.5"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtFilter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textColor="@color/font_title"
                        android:text="@string/health_check_filter"
                        app:layout_constraintWidth_percent="0.8"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/btnClose"
                        app:layout_constraintTop_toTopOf="@+id/btnClose"
                        app:layout_constraintBottom_toBottomOf="@+id/btnClose"
                        app:layout_constraintEnd_toEndOf="parent"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtRegionTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/health_check_region"
                    android:textColor="@color/font_title"
                    android:textSize="16dp"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/topView"
                    app:layout_constraintWidth_percent="0.88" />

                <kr.co.alphadopetshop.util.FlowLayout
                    android:id="@+id/flowLayoutRegion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtRegionTitle"
                    app:layout_constraintStart_toStartOf="@+id/txtRegionTitle"
                    app:layout_constraintEnd_toEndOf="@+id/txtRegionTitle"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtMemberShipTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/health_check_membership"
                    android:textColor="@color/font_title"
                    android:textSize="16dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/flowLayoutRegion"
                    app:layout_constraintWidth_percent="0.88" />

                <kr.co.alphadopetshop.util.FlowLayout
                    android:id="@+id/flowLayoutMemberShip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtMemberShipTitle"
                    app:layout_constraintStart_toStartOf="@+id/txtMemberShipTitle"
                    app:layout_constraintEnd_toEndOf="@+id/txtMemberShipTitle"/>

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="9dp"
                    android:background="@color/divider_grey"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/flowLayoutMemberShip"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtDistanceTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/health_check_distance"
                    android:textColor="@color/font_title"
                    android:textSize="16dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/divider"
                    app:layout_constraintWidth_percent="0.88" />

                <kr.co.alphadopetshop.util.FlowLayout
                    android:id="@+id/flowLayoutDistance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtDistanceTitle"
                    app:layout_constraintStart_toStartOf="@+id/txtDistanceTitle"
                    app:layout_constraintEnd_toEndOf="@+id/txtDistanceTitle"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtReviewScoreTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/health_check_review_score"
                    android:textColor="@color/font_title"
                    android:textSize="16dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/flowLayoutDistance"
                    app:layout_constraintWidth_percent="0.88" />

                <kr.co.alphadopetshop.util.FlowLayout
                    android:id="@+id/flowLayoutReviewScore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtReviewScoreTitle"
                    app:layout_constraintStart_toStartOf="@+id/txtReviewScoreTitle"
                    app:layout_constraintEnd_toEndOf="@+id/txtReviewScoreTitle"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtReviewCountTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/health_check_review_count"
                    android:textColor="@color/font_title"
                    android:textSize="16dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/flowLayoutReviewScore"
                    app:layout_constraintWidth_percent="0.88" />

                <kr.co.alphadopetshop.util.FlowLayout
                    android:id="@+id/flowLayoutCountScore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtReviewCountTitle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/txtReviewCountTitle"
                    app:layout_constraintEnd_toEndOf="@+id/txtReviewCountTitle"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBottom"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:background="@color/point_color"
            android:text="적용하기"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
