<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/font_title"
            android:textSize="12dp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintWidth_percent="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_sub"
            android:textSize="12dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@+id/txtId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/txtId"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="3dp"

            app:layout_constraintTop_toBottomOf="@+id/txtId"
            app:layout_constraintStart_toStartOf="@+id/txtId">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_title"
                android:textSize="12dp"
                android:text="@string/review_examination"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtExaminationScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/point_color"
                android:textSize="12dp"
                android:layout_marginStart="5dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:background="@drawable/bg_10dp_rounding_stroke_point"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_title"
                android:textSize="12dp"
                android:text="@string/review_facility"
                android:layout_marginStart="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtFacilityScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/point_color"
                android:textSize="12dp"
                android:layout_marginStart="5dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:background="@drawable/bg_10dp_rounding_stroke_point"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_title"
                android:textSize="12dp"
                android:text="@string/review_kindness"
                android:layout_marginStart="10dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtKindnessScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/point_color"
                android:textSize="12dp"
                android:layout_marginStart="5dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:background="@drawable/bg_10dp_rounding_stroke_point"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <kr.co.alphadopetshop.util.CharacterWrapTextView
            android:id="@+id/txtContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="7dp"
            android:lineSpacingExtra="6dp"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@+id/layoutScore"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="11dp"
            app:layout_constraintTop_toBottomOf="@+id/txtContent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtContent"
            app:layout_constraintEnd_toEndOf="@+id/txtContent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
